--- a/src/components/FriendList/FriendList.module.css
+++ b/src/components/FriendList/FriendList.module.css
@@ -8,7 +8,7 @@
 .item{
     display: flex;
     align-items: center;
-    justify-content: start;  
+    justify-content: flex-start;  
     gap: 15px;  
     padding: 10px 25px;
 }
